--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,53 @@ text-decoration: none;
     line-height: 1.125rem;
     margin: 0;
 }
+/* certification */
+.certificates-sub-container{
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    gap: 2rem;
+    margin-top: 3rem;
+  
+}
+.certificates-list{
+    display: flex;
+    align-items: center;
+    gap: 1.25rem;
+    border: 2px solid #444;
+    border-radius: 0.375rem;
+    transition: transform 0.3s ease;
+    margin-top: 1rem;
+    min-height: 100px;
+}
+.certificates-list:hover{
+    transform: translateY(-0.5rem);
+}
+.certificates-logo-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    background-color: #444;
+    height: 3rem;
+}
+.certificate-name{
+    color: white;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    margin: 0;
+}
+.certificate-org-name,
+.certificate-date,
+.certificate-link{
+    font-size: 12px;
+    line-height: 16px;
+    color: #777;
+    margin: 8px 0;
+}
+.subtitle-container .subtitle,
+.subtitle-container .line{
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
