--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ text-decoration: none;
     grid-template-columns: repeat(2,minmax(0,1fr));
     gap: 2rem;
     margin-top: 3rem;
+    margin-bottom: 3rem;
   
 }
 .certificates-list{
@@ -249,9 +250,24 @@ text-decoration: none;
     color: #777;
     margin: 8px 0;
 }
+.certificate-link{
+    text-decoration: none;
+}
+.certificate-link:hover{
+    text-decoration: underline;
+}
 .subtitle-container .subtitle,
 .subtitle-container .line{
     text-align: center;
     margin: 0 auto;
+    display: block;
+}
+.certificate-btn{
+    padding: 1rem 1.5rem;
+    background-color: #333;
+    border: 2px solid #d5d5d5;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    margin: 2rem auto;
     display: block;
 }
