--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,9 @@ text-decoration: none;
     min-height: 80vh;
 }
 .hero-img,
-.resume-img
+.resume-img,
+.project-img,
+.certificate-logo
 {
     max-width: 100%;
     height: auto;
@@ -303,4 +305,16 @@ text-decoration: none;
 }
 .progress::-webkit-progress-value{
     background-color: rgb(59, 130, 246);
+}
+/* portfolio */
+.project-container{
+    display: grid;
+    grid-template-columns: repeat(3,minmax(0,1fr));
+    gap: 2rem;
+    margin-top: 3rem;
+}
+.project-list{
+    margin-top: 2rem;
+    border: 1px solid #333;
+    border-radius: 2rem;
 }
