--- a/css/style.css
+++ b/css/style.css
@@ -338,3 +338,48 @@ text-decoration: none;
 .project-link{
     padding-left: 1rem;
 }
+/* contact */
+.contact-info-container{
+    display: grid;
+    grid-template-columns: 33% 1fr;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2.5rem;
+    gap: 1rem;
+    margin-bottom: 2.5rem;
+}
+.contact-info-container a,
+.contact-info-container p {
+    text-decoration: none;
+    font-size: 16px;
+}
+form{
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+    gap: 1rem;
+}
+.input-field{
+    background-color:transparent;
+    border: 2px solid #555;
+    border-radius: 2px;
+    width: 90%;
+    padding:0.625rem;
+    margin-bottom: 1rem;
+    font-size:1rem;
+
+}
+.input-field:focus{
+    outline: none;
+}
+.contact-btn{
+    background-color:transparent;
+    cursor: pointer;
+    border: 2px solid #3b82f6;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.contact-btn:hover{
+    background-color: #3b82f6;
+}
